# collision_map_creator_plugin

./: .hgignore  CMakeLists.txt  CMakeLists.txt~  README.md  collision_map_creator.cc  map_creator.world  request_publisher.cc
msgs/: CMakeLists.txt  CMakeLists.txt~  collision_map_request.proto  vec2d.proto
png++-0.2.5/doc/html/: classes.html  classpng_1_1basic__pixel__buffer-members.html  classpng_1_1basic__pixel__buffer.html  classpng_1_1def__image__info__holder-members.html  classpng_1_1detail_1_1allowed__bit__depth_3_011_01_4.html  classpng_1_1detail_1_1allowed__bit__depth_3_012_01_4.html  classpng_1_1detail_1_1basic__packed__pixel__proxy-members.html  classpng_1_1detail_1_1basic__packed__pixel__proxy.html  classpng_1_1end__info-members.html  classpng_1_1end__info.html  classpng_1_1error.html  classpng_1_1image-members.html  classpng_1_1image.html  classpng_1_1image_1_1pixel__consumer-members.html  classpng_1_1image_1_1pixel__generator.html  classpng_1_1image_1_1streaming__impl.html  classpng_1_1image__info__ref__holder-members.html  classpng_1_1image__info__ref__holder.html  classpng_1_1index__pixel.html  classpng_1_1info-members.html  classpng_1_1info__base-members.html  color_8hpp.html  (+98 more)
png++-0.2.5/example/: pixel_generator  pixel_generator.dep
png++-0.2.5/test/: convert_color_space  convert_color_space.dep  dump  dump.dep  generate_gray_packed  generate_gray_packed.dep  generate_palette  generate_palette.dep  read_write_gray_packed  read_write_gray_packed.dep  read_write_param  read_write_param.dep  write_gray_16  write_gray_16.dep
world/: simple.world
(+556 files in other folders)
